Add a cladding facade design and implementation page

--- a/index.html
+++ b/index.html
@@ -515,7 +515,7 @@
     </a>
 
     <!-- زر قراءة المزيد -->
-    <a href="details.html"
+    <a href="./services/serv-three/index.html"
       class="gradient-primary text-white px-3 py-2 rounded-lg shadow-md hover:scale-105 transform transition inline-block">
        قراءة المزيد
     <i class="fas fa-arrow-left ml-2 "></i>
@@ -562,7 +562,7 @@
     </a>
 
     <!-- زر قراءة المزيد -->
-    <a href="details.html"
+    <a href="./services/serv-four/index.html"
       class="gradient-primary text-white px-3 py-2 rounded-lg shadow-md hover:scale-105 transform transition inline-block">
        قراءة المزيد
     <i class="fas fa-arrow-left ml-2 "></i>
