add link and numper phone

--- a/index.html
+++ b/index.html
@@ -467,7 +467,7 @@
   <!-- الأزرار -->
   <div class="text-center space-x-3 space-x-reverse">
     <!-- زر الاتصال -->
-    <a href="tel:+965501234567"
+    <a href="tel:0501234567"
       class="gradient-primary text-white px-3 py-2 rounded-lg shadow-md hover:scale-105 transform transition inline-block">
       <i class="fas fa-phone-alt ml-2"></i> اتصل بنا
     </a>
@@ -509,7 +509,7 @@
           <!-- زر الاتصال -->
  <div class="text-center space-x-3 space-x-reverse">
     <!-- زر الاتصال -->
-    <a href="tel:+965501234567"
+    <a href="tel:0501234567"
       class="gradient-primary text-white px-3 py-2 rounded-lg shadow-md hover:scale-105 transform transition inline-block">
       <i class="fas fa-phone-alt ml-2"></i> اتصل بنا
     </a>
@@ -556,7 +556,7 @@
           <!-- زر الاتصال -->
           <div class="text-center space-x-3 space-x-reverse">
     <!-- زر الاتصال -->
-    <a href="tel:+965501234567"
+    <a href="tel:0501234567"
       class="gradient-primary text-white px-3 py-2 rounded-lg shadow-md hover:scale-105 transform transition inline-block">
       <i class="fas fa-phone-alt ml-2"></i> اتصل بنا
     </a>
@@ -603,7 +603,7 @@
           <!-- زر الاتصال -->
            <div class="text-center space-x-3 space-x-reverse">
     <!-- زر الاتصال -->
-    <a href="tel:+965501234567"
+    <a href="tel:0501234567"
       class="gradient-primary text-white px-3 py-2 rounded-lg shadow-md hover:scale-105 transform transition inline-block">
       <i class="fas fa-phone-alt ml-2"></i> اتصل بنا
     </a>
@@ -647,13 +647,13 @@
           <!-- زر الاتصال -->
            <div class="text-center space-x-3 space-x-reverse">
     <!-- زر الاتصال -->
-    <a href="tel:+965501234567"
+    <a href="tel:0501234567"
       class="gradient-primary text-white px-3 py-2 rounded-lg shadow-md hover:scale-105 transform transition inline-block">
       <i class="fas fa-phone-alt ml-2"></i> اتصل بنا
     </a>
 
     <!-- زر قراءة المزيد -->
-    <a href="details.html"
+    <a href="./services/serv-five/index.html"
       class="gradient-primary text-white px-3 py-2 rounded-lg shadow-md hover:scale-105 transform transition inline-block">
        قراءة المزيد
     <i class="fas fa-arrow-left ml-2 "></i>
@@ -692,7 +692,7 @@
           <!-- زر الاتصال -->
            <div class="text-center space-x-3 space-x-reverse">
     <!-- زر الاتصال -->
-    <a href="tel:+965501234567"
+    <a href="tel:0501234567"
       class="gradient-primary text-white px-3 py-2 rounded-lg shadow-md hover:scale-105 transform transition inline-block">
       <i class="fas fa-phone-alt ml-2"></i> اتصل بنا
     </a>
@@ -732,7 +732,7 @@
           <!-- زر الاتصال -->
  <div class="text-center space-x-3 space-x-reverse">
     <!-- زر الاتصال -->
-    <a href="tel:+965501234567"
+    <a href="tel:0501234567"
       class="gradient-primary text-white px-3 py-2 rounded-lg shadow-md hover:scale-105 transform transition inline-block">
       <i class="fas fa-phone-alt ml-2"></i> اتصل بنا
     </a>
@@ -776,7 +776,7 @@
           <!-- زر الاتصال -->
           <div class="text-center space-x-3 space-x-reverse">
     <!-- زر الاتصال -->
-    <a href="tel:+965501234567"
+    <a href="tel:0501234567"
       class="gradient-primary text-white px-3 py-2 rounded-lg shadow-md hover:scale-105 transform transition inline-block">
       <i class="fas fa-phone-alt ml-2"></i> اتصل بنا
     </a>
@@ -818,7 +818,7 @@
           <!-- زر الاتصال -->
            <div class="text-center space-x-3 space-x-reverse">
     <!-- زر الاتصال -->
-    <a href="tel:+965501234567"
+    <a href="tel:0501234567"
       class="gradient-primary text-white px-3 py-2 rounded-lg shadow-md hover:scale-105 transform transition inline-block">
       <i class="fas fa-phone-alt ml-2"></i> اتصل بنا
     </a>
