--- a/services/serv-one/index.html
+++ b/services/serv-one/index.html
@@ -639,7 +639,7 @@
 
 
 <!-- مميزات خدماتنا -->
-<section id="features" class="py-16 bg-gray-50">
+<section id="features" class="py-16 bg-gray-50 content-section">
   <div class="container mx-auto px-6">
     <!-- العنوان الرئيسي -->
     <h2 class="text-3xl font-bold text-primary text-center mb-4">مميزات خدماتنا</h2>
