--- a/services/serv-tow/index.html
+++ b/services/serv-tow/index.html
@@ -187,9 +187,7 @@
                             <a href="tel:0501234567" class="bg-white text-primary py-3 px-6 rounded-lg font-bold hover:bg-gray-100 transition duration-300">
                                 <i class="fas fa-bolt ml-2"></i>اطلب خدمتك الآن
                             </a>
-                            <a href="#portfolio" class="border-2 border-white py-3 px-6 rounded-lg font-bold hover:bg-white hover:text-primary transition duration-300">
-                                <i class="fas fa-images ml-2"></i>معرض أعمالنا
-                            </a>
+                            
                         </div>
                     </div>
                 </div>
@@ -569,7 +567,7 @@
 
 
 <!-- مراحل التصنيع -->
-<section id="production-steps" class="py-16 bg-white">
+<section id="production-steps" class="py-16 bg-white content-section">
   <div class="container mx-auto px-6">
     <!-- العنوان الرئيسي -->
     <div class="text-center mb-12">
@@ -664,7 +662,7 @@
 
 
 <!-- قسم مميزات خدماتنا -->
-<section id="features" class="py-16 bg-gray-50">
+<section id="features" class="py-16 bg-gray-50 content-section">
   <div class="container mx-auto px-6">
     
     <!-- العنوان الرئيسي -->
