--- a/services/serv-three/index.html
+++ b/services/serv-three/index.html
@@ -151,7 +151,7 @@
                         <li><a href="#creative" class="nav-item block py-3 px-4 rounded-lg text-gray-700 font-medium">أفكار إبداعية</a></li>
                         <li><a href="#fence-types" class="nav-item block py-3 px-4 rounded-lg text-gray-700 font-medium">أنواع الأسوار</a></li>
                         <li><a href="#execution-steps" class="nav-item block py-3 px-4 rounded-lg text-gray-700 font-medium">مراحل التنفيذ</a></li>
-                        <li><a href="#advantages" class="nav-item block py-3 px-4 rounded-lg text-gray-700 font-medium">مميزات خدماتنا</a></li>
+                        <li><a href="#features" class="nav-item block py-3 px-4 rounded-lg text-gray-700 font-medium">مميزات خدماتنا</a></li>
                         
                         <li><a href="#faq" class="nav-item block py-3 px-4 rounded-lg text-gray-700 font-medium">الأسئلة الشائعة</a></li>
                     </ul>
@@ -427,7 +427,7 @@
 
 
                     <!-- قسم أنواع الأسوار والسواتر الإعلانية -->
-<section id="fence-types" class="py-16 bg-gray-50">
+<section id="fence-types" class="py-16 bg-gray-50 content-section">
   <div class="container mx-auto px-6">
 
     <!-- العنوان الرئيسي -->
@@ -547,7 +547,7 @@
 
 
 <!-- قسم مراحل التنفيذ -->
-<section id="execution-steps" class="py-16 bg-gray-50 relative">
+<section id="execution-steps" class="py-16 bg-gray-50 relative content-section">
   <div class="container mx-auto px-6">
 
     <!-- العنوان الرئيسي -->
@@ -661,7 +661,7 @@
 
 
 <!-- قسم مميزات خدماتنا -->
-<section id="features" class="py-16 bg-gray-50 relative">
+<section id="features" class="py-16 bg-gray-50 relative content-section">
   <div class="container mx-auto px-6">
 
     <!-- العنوان الرئيسي -->
@@ -751,7 +751,7 @@
 
 
 <!-- قسم الأسئلة الشائعة -->
-<section id="faq" class="py-16 bg-gray-50">
+<section id="faq" class="py-16 bg-gray-50 content-section">
   <div class="container mx-auto px-6">
 
     <!-- العنوان الرئيسي -->
