enahnce buttons for contact and read-more

--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
     <div class="flex items-center space-x-reverse space-x-4">
       <div class="text-right hidden md:block">
         <a href="tel:+966501234567"
-          class="inline-block gradient-primary text-white px-5 py-3 rounded-lg shadow-md hover:bg-primary-dark transition-colors">
+          class="btn-responsive gradient-primary text-white shadow-md hover:bg-primary-dark transition-colors">
           <p class="text-sm">اتصل بنا</p>
         </a>
       </div>
@@ -205,7 +205,7 @@
       <a href="#services" class="text-black hover:text-primary transition-colors font-medium">خدماتنا</a>
       <a href="#Our-business" class="text-black hover:text-primary transition-colors font-medium">اعمالنا</a>
       <a href="tel:+966501234567"
-        class="inline-block bg-primary text-white px-5 py-3 rounded-lg shadow-md hover:bg-primary-dark transition-colors">
+        class="btn-responsive bg-primary text-white shadow-md hover:bg-primary-dark transition-colors">
         اتصل بنا
       </a>
     </div>
@@ -233,7 +233,7 @@
           </p>
           <a href="tel:+966501234567" aria-label="اتصل بنا لبدء مشروعك">
             <button 
-              class="bg-white text-blue-600 px-6 md:px-8 py-3 md:py-4 rounded-full font-bold text-base md:text-lg hover:bg-gray-100 transition-colors shadow-lg">
+              class="btn-responsive bg-white text-blue-600 rounded-full font-bold hover:bg-gray-100 transition-colors shadow-lg">
               ابدأ مشروعك
             </button>
           </a>
@@ -254,7 +254,7 @@
           </p>
           <a href="tel:+966501234567" aria-label="اكتشف أعمالنا السابقة">
             <button 
-              class="bg-white text-pink-600 px-6 md:px-8 py-3 md:py-4 rounded-full font-bold text-base md:text-lg hover:bg-gray-100 transition-colors shadow-lg">
+              class="btn-responsive bg-white text-pink-600 rounded-full font-bold hover:bg-gray-100 transition-colors shadow-lg">
               استكشف أعمالنا
             </button>
           </a>
@@ -275,7 +275,7 @@
           </p>
           <a href="tel:+966501234567" aria-label="تواصل معنا مباشرة">
             <button 
-              class="bg-white text-blue-500 px-6 md:px-8 py-3 md:py-4 rounded-full font-bold text-base md:text-lg hover:bg-gray-100 transition-colors shadow-lg">
+              class="btn-responsive bg-white text-blue-500 rounded-full font-bold hover:bg-gray-100 transition-colors shadow-lg">
               تواصل معنا
             </button>
           </a>
@@ -394,9 +394,9 @@
         <!-- زر تواصل -->
         <div class="fade-in">
           <a href="tel:+966501234567" 
-            class="inline-block gradient-bg text-white py-3 px-8 rounded-full font-bold text-lg shadow-md hover:shadow-lg transition-all duration-300"
+            class="btn-responsive gradient-bg text-white rounded-full font-bold shadow-md hover:shadow-lg transition-all duration-300"
             aria-label="تواصل معنا عبر الهاتف">
-            تواصل معنا <i class="fas fa-arrow-left mr-2"></i>
+            تواصل معنا <i class="fas fa-arrow-left btn-icon-spacing"></i>
           </a>
         </div>
       </div>
@@ -465,18 +465,18 @@
   </ul>
 
   <!-- الأزرار -->
-  <div class="text-center space-x-3 space-x-reverse">
+  <div class="btn-container btn-center mt-6">
     <!-- زر الاتصال -->
     <a href="tel:0501234567"
-      class="gradient-primary text-white px-3 py-2 rounded-lg shadow-md hover:scale-105 transform transition inline-block">
-      <i class="fas fa-phone-alt ml-2"></i> اتصل بنا
+      class="service-btn gradient-primary text-white hover:scale-105 transform transition">
+      <i class="fas fa-phone-alt btn-icon-spacing"></i> اتصل بنا
     </a>
 
     <!-- زر قراءة المزيد -->
     <a href="./services/serv-tow/index.html"
-      class="gradient-primary text-white px-3 py-2 rounded-lg shadow-md hover:scale-105 transform transition inline-block">
+      class="service-btn gradient-primary text-white hover:scale-105 transform transition">
        قراءة المزيد
-    <i class="fas fa-arrow-left ml-2 "></i>
+    <i class="fas fa-arrow-left btn-icon-spacing"></i>
       </a>
   </div>
     </div>
@@ -507,18 +507,18 @@
           </ul>
 
           <!-- زر الاتصال -->
- <div class="text-center space-x-3 space-x-reverse">
+  <div class="btn-container btn-center mt-6">
     <!-- زر الاتصال -->
     <a href="tel:0501234567"
-      class="gradient-primary text-white px-3 py-2 rounded-lg shadow-md hover:scale-105 transform transition inline-block">
-      <i class="fas fa-phone-alt ml-2"></i> اتصل بنا
+      class="service-btn gradient-primary text-white hover:scale-105 transform transition">
+      <i class="fas fa-phone-alt btn-icon-spacing"></i> اتصل بنا
     </a>
 
     <!-- زر قراءة المزيد -->
     <a href="./services/serv-three/index.html"
-      class="gradient-primary text-white px-3 py-2 rounded-lg shadow-md hover:scale-105 transform transition inline-block">
+      class="service-btn gradient-primary text-white hover:scale-105 transform transition">
        قراءة المزيد
-    <i class="fas fa-arrow-left ml-2 "></i>
+    <i class="fas fa-arrow-left btn-icon-spacing"></i>
       </a>
   </div>
         </div>
@@ -554,18 +554,18 @@
           </ul>
 
           <!-- زر الاتصال -->
-          <div class="text-center space-x-3 space-x-reverse">
+           <div class="btn-container btn-center mt-6">
     <!-- زر الاتصال -->
     <a href="tel:0501234567"
-      class="gradient-primary text-white px-3 py-2 rounded-lg shadow-md hover:scale-105 transform transition inline-block">
-      <i class="fas fa-phone-alt ml-2"></i> اتصل بنا
+      class="service-btn gradient-primary text-white hover:scale-105 transform transition">
+      <i class="fas fa-phone-alt btn-icon-spacing"></i> اتصل بنا
     </a>
 
     <!-- زر قراءة المزيد -->
     <a href="./services/serv-four/index.html"
-      class="gradient-primary text-white px-3 py-2 rounded-lg shadow-md hover:scale-105 transform transition inline-block">
+      class="service-btn gradient-primary text-white hover:scale-105 transform transition">
        قراءة المزيد
-    <i class="fas fa-arrow-left ml-2 "></i>
+    <i class="fas fa-arrow-left btn-icon-spacing"></i>
       </a>
   </div>
         </div>
@@ -601,18 +601,18 @@
           </ul>
 
           <!-- زر الاتصال -->
-           <div class="text-center space-x-3 space-x-reverse">
+           <div class="btn-container btn-center mt-6">
     <!-- زر الاتصال -->
     <a href="tel:0501234567"
-      class="gradient-primary text-white px-3 py-2 rounded-lg shadow-md hover:scale-105 transform transition inline-block">
-      <i class="fas fa-phone-alt ml-2"></i> اتصل بنا
+      class="service-btn gradient-primary text-white hover:scale-105 transform transition">
+      <i class="fas fa-phone-alt btn-icon-spacing"></i> اتصل بنا
     </a>
 
     <!-- زر قراءة المزيد -->
     <a href="./services/serv-one/index.html"
-      class="gradient-primary text-white px-3 py-2 rounded-lg shadow-md hover:scale-105 transform transition inline-block">
+      class="service-btn gradient-primary text-white hover:scale-105 transform transition">
        قراءة المزيد
-    <i class="fas fa-arrow-left ml-2 "></i>
+    <i class="fas fa-arrow-left btn-icon-spacing"></i>
       </a>
   </div>
         </div>
@@ -645,18 +645,18 @@
           </ul>
 
           <!-- زر الاتصال -->
-           <div class="text-center space-x-3 space-x-reverse">
+          <div class="btn-container btn-center mt-6">
     <!-- زر الاتصال -->
     <a href="tel:0501234567"
-      class="gradient-primary text-white px-3 py-2 rounded-lg shadow-md hover:scale-105 transform transition inline-block">
-      <i class="fas fa-phone-alt ml-2"></i> اتصل بنا
+      class="service-btn gradient-primary text-white hover:scale-105 transform transition">
+      <i class="fas fa-phone-alt btn-icon-spacing"></i> اتصل بنا
     </a>
 
     <!-- زر قراءة المزيد -->
     <a href="./services/serv-five/index.html"
-      class="gradient-primary text-white px-3 py-2 rounded-lg shadow-md hover:scale-105 transform transition inline-block">
+      class="service-btn gradient-primary text-white hover:scale-105 transform transition">
        قراءة المزيد
-    <i class="fas fa-arrow-left ml-2 "></i>
+    <i class="fas fa-arrow-left btn-icon-spacing"></i>
       </a>
   </div>
         </div>
@@ -665,7 +665,7 @@
         <div class="service-card bg-white p-4 rounded-2xl fade-in">
           <!-- الصورة -->
           <div class="w-full h-100 mb-6 mx-auto overflow-hidden">
-            <img src="./assets/img/Design-and-programming.webp" alt="تصميم وبرمجة المواقع الإلكترونية باحترافية"
+            <img src="./assets/img/design-and-programming.webp" alt="تصميم وبرمجة المواقع الإلكترونية باحترافية"
               class="w-full  object-contain transform transition-transform duration-500 hover:scale-110" loading="lazy"
               width="800" height="600">
           </div>
@@ -690,18 +690,18 @@
           </ul>
 
           <!-- زر الاتصال -->
-           <div class="text-center space-x-3 space-x-reverse">
+           <div class="btn-container btn-center mt-6">
     <!-- زر الاتصال -->
     <a href="tel:0501234567"
-      class="gradient-primary text-white px-3 py-2 rounded-lg shadow-md hover:scale-105 transform transition inline-block">
-      <i class="fas fa-phone-alt ml-2"></i> اتصل بنا
+      class="service-btn gradient-primary text-white hover:scale-105 transform transition">
+      <i class="fas fa-phone-alt btn-icon-spacing"></i> اتصل بنا
     </a>
 
     <!-- زر قراءة المزيد -->
     <a href="./services/serv-six/index.html"
-      class="gradient-primary text-white px-3 py-2 rounded-lg shadow-md hover:scale-105 transform transition inline-block">
+      class="service-btn gradient-primary text-white hover:scale-105 transform transition">
        قراءة المزيد
-    <i class="fas fa-arrow-left ml-2 "></i>
+    <i class="fas fa-arrow-left btn-icon-spacing"></i>
       </a>
   </div>
         </div>
@@ -730,18 +730,18 @@
           </ul>
 
           <!-- زر الاتصال -->
- <div class="text-center space-x-3 space-x-reverse">
+ <div class="btn-container btn-center mt-6">
     <!-- زر الاتصال -->
     <a href="tel:0501234567"
-      class="gradient-primary text-white px-3 py-2 rounded-lg shadow-md hover:scale-105 transform transition inline-block">
-      <i class="fas fa-phone-alt ml-2"></i> اتصل بنا
+      class="service-btn gradient-primary text-white hover:scale-105 transform transition">
+      <i class="fas fa-phone-alt btn-icon-spacing"></i> اتصل بنا
     </a>
 
     <!-- زر قراءة المزيد -->
     <a href="details.html"
-      class="gradient-primary text-white px-3 py-2 rounded-lg shadow-md hover:scale-105 transform transition inline-block">
+      class="service-btn gradient-primary text-white hover:scale-105 transform transition">
        قراءة المزيد
-    <i class="fas fa-arrow-left ml-2 "></i>
+    <i class="fas fa-arrow-left btn-icon-spacing"></i>
       </a>
   </div>
         </div>
@@ -774,16 +774,16 @@
           </ul>
 
           <!-- زر الاتصال -->
-          <div class="text-center space-x-3 space-x-reverse">
+          <div class="btn-container btn-center">
     <!-- زر الاتصال -->
     <a href="tel:0501234567"
-      class="gradient-primary text-white px-3 py-2 rounded-lg shadow-md hover:scale-105 transform transition inline-block">
+      class="service-btn gradient-primary text-white hover:scale-105 transform transition">
       <i class="fas fa-phone-alt ml-2"></i> اتصل بنا
     </a>
 
     <!-- زر قراءة المزيد -->
     <a href="details.html"
-      class="gradient-primary text-white px-3 py-2 rounded-lg shadow-md hover:scale-105 transform transition inline-block">
+      class="service-btn gradient-primary text-white hover:scale-105 transform transition">
        قراءة المزيد
     <i class="fas fa-arrow-left ml-2 "></i>
       </a>
@@ -816,16 +816,16 @@
           </ul>
 
           <!-- زر الاتصال -->
-           <div class="text-center space-x-3 space-x-reverse">
+           <div class="btn-container btn-center">
     <!-- زر الاتصال -->
     <a href="tel:0501234567"
-      class="gradient-primary text-white px-3 py-2 rounded-lg shadow-md hover:scale-105 transform transition inline-block">
+      class="service-btn gradient-primary text-white hover:scale-105 transform transition">
       <i class="fas fa-phone-alt ml-2"></i> اتصل بنا
     </a>
 
     <!-- زر قراءة المزيد -->
     <a href="details.html"
-      class="gradient-primary text-white px-3 py-2 rounded-lg shadow-md hover:scale-105 transform transition inline-block">
+      class="service-btn gradient-primary text-white hover:scale-105 transform transition">
        قراءة المزيد
     <i class="fas fa-arrow-left ml-2 "></i>
       </a>
@@ -1136,7 +1136,7 @@
         <div class="work-item social rounded-lg overflow-hidden shadow-lg bg-white">
           <!-- الصورة -->
           <div class="relative w-full h-64 sm:h-72 md:h-80">
-            <img src="./assets/img/Design-and-programming.webp" alt="تصميم وبرمجة المواقع الإلكترونية"
+            <img src="./assets/img/design-and-programming.webp" alt="تصميم وبرمجة المواقع الإلكترونية"
               class="w-full h-full   bg-gray-100 " loading="lazy" width="800" height="600">
 
             <!-- الأوفرلاي مع زر التفاصيل -->
@@ -1425,7 +1425,7 @@
       <!-- Call to Action -->
       <div class="text-center mt-20">
         <a href="#contact"
-          class="inline-block bg-gradient-to-r from-primary to-primary-dark text-white px-10 py-4 rounded-2xl shadow-lg text-lg font-bold hover:scale-105 transform transition">
+          class="btn-responsive bg-gradient-to-r from-primary to-primary-dark text-white rounded-2xl shadow-lg font-bold hover:scale-105 transform transition">
           ابدأ رحلتك معنا الآن
         </a>
       </div>
@@ -1538,7 +1538,7 @@
           <span class="font-semibold" style="color:#0e8779;">النجاح</span> يبدأ برسالة واضحة، وإعلان قوي يوصلها صح.
         </p>
         <a href="tel:+966501234567"
-          class="inline-block mt-4 px-6 py-3 text-white rounded-lg shadow-lg transition duration-300"
+          class="btn-responsive mt-4 text-white rounded-lg shadow-lg transition duration-300"
           style="background-color:#0e8779;">
           ابدأ حملتك الآن
         </a>
@@ -1570,20 +1570,20 @@
 
 
 
-<div class="fixed bottom-6 left-6 flex flex-col space-y-4 z-50">
+<div class="fixed bottom-4 left-4 flex flex-col space-y-3 z-50 sm:bottom-6 sm:left-6 sm:space-y-4">
   <!-- زر الاتصال -->
   <a href="tel:0501234567"
-    class="bg-gradient-to-r from-primary to-primary text-white w-14 h-14 rounded-full shadow-lg hover:scale-110 transition-transform duration-300 flex items-center justify-center focus:outline-none focus:ring-2 focus:ring-primary"
+    class="bg-gradient-to-r from-primary to-primary text-white w-12 h-12 sm:w-14 sm:h-14 rounded-full shadow-lg hover:scale-110 transition-transform duration-300 flex items-center justify-center focus:outline-none focus:ring-2 focus:ring-primary"
     aria-label="الاتصال على رقم 965501234567">
-    <i class="fas fa-phone-alt text-2xl"></i>
+    <i class="fas fa-phone-alt text-lg sm:text-2xl"></i>
   </a>
 
 
   <!-- زر الواتساب -->
   <a href="https://wa.me/966501234567" target="_blank" rel="noopener noreferrer"
-    class="bg-green-500 text-white w-14 h-14 rounded-full shadow-lg hover:scale-110 transition-transform duration-300 flex items-center justify-center focus:outline-none focus:ring-2 focus:ring-green-500"
+    class="bg-green-500 text-white w-12 h-12 sm:w-14 sm:h-14 rounded-full shadow-lg hover:scale-110 transition-transform duration-300 flex items-center justify-center focus:outline-none focus:ring-2 focus:ring-green-500"
     aria-label="تواصل معنا عبر الواتساب">
-    <i class="fab fa-whatsapp text-2xl"></i>
+    <i class="fab fa-whatsapp text-lg sm:text-2xl"></i>
   </a>
 
 </div>
