--- a/index.html
+++ b/index.html
@@ -738,7 +738,7 @@
     </a>
 
     <!-- زر قراءة المزيد -->
-    <a href="details.html"
+    <a href="./services/serv-seven/index.html"
       class="service-btn gradient-primary text-white hover:scale-105 transform transition">
        قراءة المزيد
     <i class="fas fa-arrow-left btn-icon-spacing"></i>
