Add a photography and editing services page

--- a/index.html
+++ b/index.html
@@ -782,7 +782,7 @@
     </a>
 
     <!-- زر قراءة المزيد -->
-    <a href="details.html"
+    <a href="./services/serv-eight/index.html"
       class="service-btn gradient-primary text-white hover:scale-105 transform transition">
        قراءة المزيد
     <i class="fas fa-arrow-left ml-2 "></i>
