--- a/index.html
+++ b/index.html
@@ -1073,7 +1073,7 @@
           <!-- الصورة -->
           <div class="relative w-full h-64 sm:h-72 md:h-80">
             <img src="./assets/img/lettering-design.webp" alt="تصميم لوحات وحروف بارزة ومضيئة"
-              class="w-full h-full object-cover bg-gray-100 " loading="lazy" width="800" height="600">
+              class="w-full h-full  bg-gray-100 " loading="lazy" width="800" height="600">
 
             <!-- الأوفرلاي مع زر التفاصيل -->
             <div
@@ -1169,7 +1169,7 @@
           <div class="relative w-full h-64 sm:h-72 md:h-80">
             <img src="./assets/img/implementation-of-lighting.webp"
               alt="تصميم وتنفيذ لوحات نيون مضيئة عالية الجودة لجذب العملاء"
-              class="w-full h-full object-cover bg-gray-100" loading="lazy" width="800" height="600">
+              class="w-full h-full  bg-gray-100" loading="lazy" width="800" height="600">
 
             <!-- الأوفرلاي مع زر التفاصيل -->
             <div
@@ -1230,7 +1230,7 @@
           <div class="relative w-full h-64 sm:h-72 md:h-80">
             <img src="./assets/img/Photography-and-montage.webp"
               alt="خدمات التصوير والمونتاج الاحترافية لإبراز علامتك التجارية"
-              class="w-full h-full object-cover bg-gray-100 " loading="lazy" width="800" height="600">
+              class="w-full h-full  bg-gray-100 " loading="lazy" width="800" height="600">
 
             <!-- Overlay -->
             <div
