change icon in serv-one

--- a/services/serv-one/index.html
+++ b/services/serv-one/index.html
@@ -51,7 +51,7 @@
 </head>
 <body class="bg-gray-100">
 <!--  Navbar -->
-<nav id="navbar" class="fixed top-0 w-full z-50 transition-all duration-300 py-4 bg-white shadow-md">
+<nav id="navbar" class="fixed top-5 w-full z-50 transition-all duration-300 py-4 bg-white shadow-md">
   <div class="container mx-auto px-4 flex items-center justify-between">
     <!-- Logo -->
     <div class="flex items-center space-x-reverse space-x-4">
@@ -551,11 +551,11 @@
     </p>
 
     <!-- تايم لاين للمراحل -->
-    <div class="relative border-l-4 border-primary pl-6 space-y-10 max-w-4xl mx-auto">
+    <div class="relative  pl-6 space-y-10 max-w-4xl mx-auto">
       
       <!-- المرحلة الأولى -->
       <div class="relative">
-        <div class="absolute -left-6 top-0 w-12 h-12 bg-primary text-white rounded-full flex items-center justify-center shadow-md">
+        <div class="absolute -left-10 top-5 w-12 h-12 bg-primary text-white rounded-full flex items-center justify-center shadow-md">
           <i class="fas fa-lightbulb text-xl"></i>
         </div>
         <h3 class="text-xl font-bold text-primary mb-2">1. مرحلة التخطيط وجمع المعلومات</h3>
@@ -568,7 +568,7 @@
 
       <!-- المرحلة الثانية -->
       <div class="relative">
-        <div class="absolute -left-6 top-0 w-12 h-12 bg-primary text-white rounded-full flex items-center justify-center shadow-md">
+        <div class="absolute -left-10 top-5 w-12 h-12 bg-primary text-white rounded-full flex items-center justify-center shadow-md">
           <i class="fas fa-pencil-ruler text-xl"></i>
         </div>
         <h3 class="text-xl font-bold text-primary mb-2">2. مرحلة التصميم الإبداعي</h3>
@@ -582,7 +582,7 @@
 
       <!-- المرحلة الثالثة -->
       <div class="relative">
-        <div class="absolute -left-6 top-0 w-12 h-12 bg-primary text-white rounded-full flex items-center justify-center shadow-md">
+        <div class="absolute -left-10 top-5 w-12 h-12 bg-primary text-white rounded-full flex items-center justify-center shadow-md">
           <i class="fas fa-print text-xl"></i>
         </div>
         <h3 class="text-xl font-bold text-primary mb-2">3. مرحلة الطباعة</h3>
@@ -596,7 +596,7 @@
 
       <!-- المرحلة الرابعة -->
       <div class="relative">
-        <div class="absolute -left-6 top-0 w-12 h-12 bg-primary text-white rounded-full flex items-center justify-center shadow-md">
+        <div class="absolute -left-10 top-5 w-12 h-12 bg-primary text-white rounded-full flex items-center justify-center shadow-md">
           <i class="fas fa-tools text-xl"></i>
         </div>
         <h3 class="text-xl font-bold text-primary mb-2">4. مرحلة التشطيب والقص</h3>
@@ -609,7 +609,7 @@
 
       <!-- المرحلة الخامسة -->
       <div class="relative">
-        <div class="absolute -left-6 top-0 w-12 h-12 bg-primary text-white rounded-full flex items-center justify-center shadow-md">
+        <div class="absolute -left-10 top-5 w-12 h-12 bg-primary text-white rounded-full flex items-center justify-center shadow-md">
           <i class="fas fa-truck text-xl"></i>
         </div>
         <h3 class="text-xl font-bold text-primary mb-2">5. مرحلة التركيب والتسليم</h3>
@@ -622,7 +622,7 @@
 
       <!-- المرحلة السادسة -->
       <div class="relative">
-        <div class="absolute -left-6 top-0 w-12 h-12 bg-primary text-white rounded-full flex items-center justify-center shadow-md">
+        <div class="absolute -left-10 top-5 w-12 h-12 bg-primary text-white rounded-full flex items-center justify-center shadow-md">
           <i class="fas fa-check-circle text-xl"></i>
         </div>
         <h3 class="text-xl font-bold text-primary mb-2">6. مرحلة المتابعة وضمان الجودة</h3>
