--- a/index.html
+++ b/index.html
@@ -819,7 +819,7 @@
     </a>
 
     <!-- زر قراءة المزيد -->
-    <a href="details.html"
+    <a href="./services/logo-and-visual-identity/index.html"
       class="service-btn gradient-primary text-white hover:scale-105 transform transition">
        قراءة المزيد
     <i class="fas fa-arrow-left ml-2 "></i>
