fix(ui): remove unnecessary border from main container
- Deleted border-r-4 and border-primary opacity styles from container div
- Simplified container styling by removing redundant classes
- Ensured layout and spacing is preserved without border element

--- a/index.html
+++ b/index.html
@@ -1359,7 +1359,7 @@
       </div>
 
 
-      <div class="relative border-r-4 border-primary border-opacity-20 max-w-4xl mx-auto">
+      <div class="relative  max-w-4xl mx-auto">
         <!-- خطوة 1 -->
         <div class="mb-16 ml-10 flex items-start space-x-reverse space-x-6">
           <div class="bg-gradient-to-r from-primary to-primary-dark text-white p-5 rounded-full shadow-lg">
