adding meta in advertising-fences-and-screens

--- a/services/advertising-fences-and-screens/index.html
+++ b/services/advertising-fences-and-screens/index.html
@@ -5,6 +5,26 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>الأسوار والسواتر الإعلانية - شركة ايجبت للدعاية والإعلان بجدة</title>
+<!-- Meta Description -->
+<meta name="description" content="شركة ايجبت للدعاية والإعلان بجدة تقدم تصميم وتنفيذ الأسوار والسواتر الإعلانية بجودة عالية وأسعار منافسة. خبرة في حلول التسويق البصري لزيادة ظهور علامتك التجارية.">
+<!-- Meta Keywords -->
+<meta name="keywords" content="أسوار إعلانية, سواتر إعلانية, دعاية وإعلان جدة, لافتات إعلانية, مصر للدعاية والإعلان, تصميم أسوار, سواتر إعلانية جدة">
+
+<!-- Robots -->
+<meta name="robots" content="index, follow">
+<!-- Open Graph for Social Media -->
+<meta property="og:title" content="الأسوار والسواتر الإعلانية بجدة - شركة ايجبت للدعاية والإعلان">
+<meta property="og:description" content="تصميم وتنفيذ الأسوار والسواتر الإعلانية بجدة بجودة عالية وأسعار تنافسية لزيادة ظهور علامتك التجارية.">
+<meta property="og:image" content="https://egypt-advertising.com/assets/img/advertising-screen-design.webp">
+<meta property="og:url" content="https://egypt-advertising.com/">
+<meta property="og:type" content="website">
+
+<!-- Twitter Card -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="الأسوار والسواتر الإعلانية بجدة - شركة ايجبت للدعاية والإعلان">
+<meta name="twitter:description" content="شركة ايجبت للدعاية والإعلان بجدة تقدم تصميم وتنفيذ الأسوار والسواتر الإعلانية بجودة عالية وأسعار منافسة.">
+<meta name="twitter:image" content="https://egypt-advertising.com/assets/img/advertising-screen-design.webp">
+
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@300;400;600;700&display=swap" rel="stylesheet">
