Add meta tags to the page banners-flex-and-vinyl

--- a/services/banners-flex-and-vinyl/index.html
+++ b/services/banners-flex-and-vinyl/index.html
@@ -4,7 +4,31 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- Title -->
   <title>خدمات الطباعة - شركة ايجبت للدعاية والإعلان بجدة</title>
+
+  <!-- Meta Description -->
+  <meta name="description" content="شركة ايجبت للدعاية والإعلان بجدة تقدم خدمات طباعة احترافية تشمل طباعة بروشورات، كتالوجات، بوسترات، بطاقات أعمال، وفواتير. جودة عالية وأسعار تنافسية لتلبية جميع احتياجات عملك.">
+
+  <!-- Meta Keywords -->
+  <meta name="keywords" content="خدمات الطباعة, طباعة بروشورات جدة, طباعة كتالوجات جدة, طباعة بوسترات, طباعة فواتير, طباعة كروت شخصية, مطابع جدة, شركة دعاية واعلان جدة, ايجبت للدعاية والإعلان, egypt advertising">
+
+  <!-- Open Graph for Social Media -->
+  <meta property="og:title" content="خدمات الطباعة - شركة ايجبت للدعاية والإعلان بجدة">
+  <meta property="og:description" content="أفضل خدمات الطباعة في جدة - طباعة بروشورات، كتالوجات، بوسترات، بطاقات أعمال، وفواتير بجودة عالية وأسعار تنافسية.">
+  <meta property="og:url" content="https://egypt-advertising.com/banners-flex-and-vinyl">
+  <meta property="og:type" content="website">
+  <meta property="og:image" content="https://egypt-advertising.com/assets/img/banner-and-flex-printing.webp">
+
+  <!-- Canonical URL -->
+  <link rel="canonical" href="https://egypt-advertising.com/banners-flex-and-vinyl">
+
+  <!-- Language -->
+  <meta name="language" content="ar">
+  <meta http-equiv="Content-Language" content="ar">
+
+  <!-- Robots -->
+  <meta name="robots" content="index, follow">
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@300;400;600;700&display=swap" rel="stylesheet">
