Add meta tags to the page cladding-facades

--- a/services/cladding-facades/index.html
+++ b/services/cladding-facades/index.html
@@ -3,7 +3,31 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>واجهات الكلادينج - شركة ايجبت للدعاية والإعلان بجدة</title>
+ <!-- Title -->
+  <title>واجهات الكلادينج - شركة ايجبت للدعاية والإعلان بجدة</title>
+
+  <!-- Meta Description -->
+  <meta name="description" content="شركة ايجبت للدعاية والإعلان بجدة تقدم تصميم وتنفيذ واجهات الكلادينج للمحلات والشركات بجودة عالية وتصاميم عصرية تعكس هوية علامتك التجارية وتجذب العملاء.">
+
+  <!-- Meta Keywords -->
+  <meta name="keywords" content="واجهات الكلادينج, واجهات محلات, كلادينج جدة, واجهات كلادينج جدة, تصميم واجهات محلات, تركيب كلادينج, شركة دعاية واعلان جدة, ايجبت للدعاية والإعلان, egypt advertising">
+
+  <!-- Open Graph (Social Media Preview) -->
+  <meta property="og:title" content="واجهات الكلادينج - شركة ايجبت للدعاية والإعلان بجدة">
+  <meta property="og:description" content="تصميم وتنفيذ واجهات كلادينج عصرية وجذابة للمحلات والشركات في جدة مع ضمان الجودة والاحترافية.">
+  <meta property="og:url" content="https://egypt-advertising.com/cladding-facades">
+  <meta property="og:type" content="website">
+  <meta property="og:image" content="https://egypt-advertising.com/assets/img/cladding-facade-design.webp">
+
+  <!-- Canonical URL -->
+  <link rel="canonical" href="https://egypt-advertising.com/cladding-facades">
+
+  <!-- Language Settings -->
+  <meta name="language" content="ar">
+  <meta http-equiv="Content-Language" content="ar">
+
+  <!-- Robots -->
+  <meta name="robots" content="index, follow">
     <script src="https://cdn.tailwindcss.com"></script>
     <link
       rel="stylesheet"
