Add meta tags to the page electronic-marketing

--- a/services/electronic-marketing/index.html
+++ b/services/electronic-marketing/index.html
@@ -4,7 +4,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>التسويق الإلكتروني وإدارة الحملات - شركة ايجبت للدعاية والإعلان بجدة</title>
+     <!-- Title -->
+  <title>التسويق الإلكتروني وإدارة الحملات - شركة ايجبت للدعاية والإعلان بجدة</title>
+
+  <!-- Meta Description -->
+  <meta name="description" content="شركة ايجبت للدعاية والإعلان بجدة تقدم خدمات التسويق الإلكتروني وإدارة الحملات الإعلانية باحترافية لزيادة مبيعاتك وتعزيز حضورك الرقمي عبر جوجل، فيسبوك، إنستجرام، ومنصات التواصل الاجتماعي.">
+
+  <!-- Meta Keywords -->
+  <meta name="keywords" content="التسويق الإلكتروني, إدارة الحملات الإعلانية, تسويق عبر جوجل, تسويق عبر فيسبوك, تسويق عبر إنستجرام, شركة تسويق جدة, دعاية واعلان جدة, شركة ايجبت للدعاية والإعلان, egypt advertising">
+
+  <!-- Open Graph for Social Media -->
+  <meta property="og:title" content="التسويق الإلكتروني وإدارة الحملات - شركة ايجبت للدعاية والإعلان بجدة">
+  <meta property="og:description" content="خدمات احترافية للتسويق الإلكتروني وإدارة الحملات الإعلانية بجدة لزيادة المبيعات وتحقيق أفضل النتائج.">
+  <meta property="og:url" content="https://egypt-advertising.com/electronic-marketing">
+  <meta property="og:type" content="website">
+  <meta property="og:image" content="https://egypt-advertising.com/assets/img/Electronic-marketing.webp">
+
+  <!-- Canonical URL -->
+  <link rel="canonical" href="https://egypt-advertising.com/electronic-marketing">
+
+  <!-- Language -->
+  <meta name="language" content="ar">
+  <meta http-equiv="Content-Language" content="ar">
+
+  <!-- Robots -->
+  <meta name="robots" content="index, follow">
     <meta name="description"
         content="استراتيجيات تسويق إلكتروني احترافية وإدارة حملات إعلانية على فيسبوك وإنستجرام، تحسين محركات البحث SEO وتحليل النتائج لتحقيق أعلى عائد على الاستثمار">
     <script src="https://cdn.tailwindcss.com"></script>
@@ -28,6 +52,31 @@
             }
         }
     </script>
+    <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Service",
+  "serviceType": "التسويق الإلكتروني وإدارة الحملات",
+  "provider": {
+    "@type": "LocalBusiness",
+    "name": "شركة ايجبت للدعاية والإعلان",
+    "image": "https://egypt-advertising.com/assets/img/logo-egypt-advertising-1.webp",
+    "telephone": "+966501234567",
+    "address": {
+      "@type": "PostalAddress",
+      "addressLocality": "جدة",
+      "addressCountry": "SA"
+    },
+    "url": "https://egypt-advertising.com"
+  },
+  "areaServed": {
+    "@type": "Place",
+    "name": "جدة"
+  },
+  "description": "شركة ايجبت للدعاية والإعلان بجدة تقدم خدمات احترافية في التسويق الإلكتروني وإدارة الحملات على جوجل وفيسبوك وإنستجرام لزيادة مبيعاتك وتعزيز حضورك الرقمي."
+}
+</script>
+
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Tajawal:wght@300;400;500;700;800&display=swap');
 
